--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <script>
-        var confm = confirm('Close Tab?')
+        var confm = confirm('Tutup Tab?')
         if (confm == true) {
             window.open('', '_self', ''); //bug fix
             window.close();
